RESOLVED FIXED168927
LayoutTest fast/dom/timer-throttling-hidden-page.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=168927
Summary LayoutTest fast/dom/timer-throttling-hidden-page.html is a flaky failure
Ryan Haddad
Reported 2017-02-27 13:20:05 PST
LayoutTest fast/dom/timer-throttling-hidden-page.html is a flaky failure https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/r213082%20(11298)/results.html https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fdom%2Ftimer-throttling-hidden-page.html --- /Volumes/Data/slave/elcapitan-debug-tests-wk2/build/layout-test-results/fast/dom/timer-throttling-hidden-page-expected.txt +++ /Volumes/Data/slave/elcapitan-debug-tests-wk2/build/layout-test-results/fast/dom/timer-throttling-hidden-page-actual.txt @@ -8,7 +8,7 @@ PASS timerIntervalWhilePageVisible is within 30 of 10 PASS timerIntervalWhilePageVisible is within 30 of 10 PASS timerIntervalWhilePageVisible is within 30 of 10 -PASS timerIntervalWhilePageHidden > (timeoutInterval + tolerance) is true +FAIL timerIntervalWhilePageHidden > (timeoutInterval + tolerance) should be true. Was false. PASS timerIntervalWhilePageVisible is within 30 of 10 PASS successfullyParsed is true
Attachments
Patch (19.98 KB, patch)
2017-03-03 15:43 PST, Chris Dumez
no flags
Patch (20.11 KB, patch)
2017-03-06 09:58 PST, Chris Dumez
no flags
Ryan Haddad
Comment 1 2017-02-27 13:26:08 PST
Ryan Haddad
Comment 2 2017-02-27 16:58:54 PST
It looks like EWS is hitting this failure, making it slower to return results.
Chris Dumez
Comment 3 2017-02-27 17:02:16 PST
Will take a look at this tomorrow. I think we should mark as flaky in the mean time.
Ryan Haddad
Comment 4 2017-02-27 17:06:16 PST
(In reply to comment #3) > Will take a look at this tomorrow. I think we should mark as flaky in the > mean time. Done in https://trac.webkit.org/changeset/213103
Chris Dumez
Comment 5 2017-03-03 15:43:40 PST
Chris Dumez
Comment 6 2017-03-06 09:58:54 PST
Chris Dumez
Comment 7 2017-03-06 10:47:10 PST
*** Bug 169135 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 8 2017-03-06 11:14:24 PST
Comment on attachment 303523 [details] Patch Clearing flags on attachment: 303523 Committed r213458: <http://trac.webkit.org/changeset/213458>
WebKit Commit Bot
Comment 9 2017-03-06 11:14:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.